@@ -1,3 +1,8 @@
+2021-09-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/docker.yaml: Add action to build and push
+	containers with cron set to monthly schedule
+
 2021-09-02  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): New release 0.4.13
